知识点整理

--- a/source/Python/面试题.ipynb
+++ b/source/Python/面试题.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597976803140",
+   "name": "python_defaultSpec_1598498094592",
    "display_name": "Python 3.7.6 64-bit (conda)"
   }
  },
@@ -145,18 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 or 3 # 1\n",
     "1 and 3 # 3\n",
@@ -228,18 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 19
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 结果 if 条件成立 else 条件不成立结果\n",
     "True if 0>1 else False"
@@ -272,18 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(2, 1)"
-     },
-     "metadata": {},
-     "execution_count": 20
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b = 1, 2\n",
     "a, b = b, a"
@@ -329,18 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'啊明小是我'"
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
+   "outputs": [],
    "source": [
     "'我是小明啊'[::-1]"
    ]
@@ -398,18 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "{3, 4, 5}"
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "source": [
     "# x,y 是两个不相等的非空集合\n",
     "x = set([1,2,3,4,5])\n",
@@ -426,18 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[('i', 12), ('a', 24), ('k', 33), ('g', 52)]"
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict = {'a':24, 'g':52, 'i':12, 'k':33}\n",
     "sorted(dict.items(), key=lambda x: x[1])"
@@ -496,18 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "{0: 0, 1: 1, 2: 2, 3: 3, 4: 4}"
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
+   "outputs": [],
    "source": [
     "{k:v for k,v in enumerate(range(5)) }"
    ]
@@ -525,6 +462,856 @@
    "source": [
     "- items(): 列表形式返回\n",
     "- iteritems(): 返回迭代器, python3用items()代替"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "26. 按照age由大到小排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = [{'name':'a', 'age':20},{'name':'b', 'age':30}, {'name':'c', 'age':35}]\n",
+    "sorted(list, key=lambda x: x['age'], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "27. 常用的字符串格式化方式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'hhm'\n",
+    "# 占位符\n",
+    "'hi %s'%name\n",
+    "# format\n",
+    "'hi {}'.format(name)\n",
+    "# f-string\n",
+    "f'hi {name}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "28. 字符串驻留机制"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 短字符串赋值给多个对象时内存中只有一个副本,\n",
+    "- 长字符串不遵守驻留机制\n",
+    "\n",
+    "驻留适用范围: 数字,字符和下划线组成的python标识符和整数\\[-5, 256\\]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "29. 代码输出?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list  = [1,2,3,4]\n",
+    "list[6:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30. 列表生成式产生一个公差为11的等差数列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(range(1, 100, 11))\n",
+    "[x*11 for x in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "31, 找出两个列表相同的元素和不同的元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,3,5,7,9]\n",
+    "b = [1,2,3,4,5]\n",
+    "set(a) & set(b)\n",
+    "set(a) ^ set(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "32. 删除list里面的重复元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "a = [1,1,1,3,3,5,5,4,4,6,6,6,3,1,5,4,2]\n",
+    "\n",
+    "sorted(set(a), key=a.index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "33. 下面这段代码的输出?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def extendlist(val, list=[]):\n",
+    "    list.append(val)\n",
+    "    return list\n",
+    "list1 = extendlist(10)\n",
+    "list2 = extendlist(123, [])\n",
+    "list3 = extendlist('a')\n",
+    "\n",
+    "print(list1, list2, list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list1 : [10, 'a']\n",
+    "# list2 : [123]\n",
+    "# list3 : [10, 'a']\n",
+    "# 默认列表只有在函数定义的时候创建一次"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "34. 按照执行效率高低排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1(lIn):\n",
+    "\t\tl1 = sorted(lIn)\n",
+    "\t\tl2 = [i for i in l1 if i<0.5]\n",
+    "\t\treturn [i*i for i in l2]\n",
+    "\n",
+    "def f2(lIn):\n",
+    "\t\tl1 = [i for i in l1 if i<0.5]\n",
+    "\t\tl2 = sorted(l1)\n",
+    "\t\treturn [i*i for i in l2]\n",
+    "        \n",
+    "def f3(lIn):\n",
+    " \tl1 = [i*i for i in lIn]\n",
+    " \tl2 = sorted(l1)\n",
+    " \treturn [i for i in l1 if i<(0.5*0.5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import cProfile\n",
+    "lIn = [random.random() for i in range(100000)]\n",
+    "cProfile.run('f1(lIn)')\n",
+    "cProfile.run('f2(lIn)')\n",
+    "cProfile.run('f3(lIn)')\n",
+    "\n",
+    "# 执行效率: f2>f1>f3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "35. 对一个所有元素都是字符串的列表进行大小写无关的排序\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = ['this', 'is', 'a', 'boy', '!']\n",
+    "sorted(list, key=lambda x: x.upper())\n",
+    "sorted(list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "36. 列举字符串,列表,元祖,字典常用的5个方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 字符串: split, upper, repalce, startswith, lower, join, strip, reverse\n",
+    "# 列表: append, pop, remove, del, index, count, sort\n",
+    "# 元祖: index, count, len, dir\n",
+    "# 字典 update, pop,  del, values, items, get, clear"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "37. 什么是反射?有何作用?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 用字符串的方式去访问对象的属性，调用对象的方法\n",
+    "# hasattr, getattr, setattr, delattr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "38. 浅拷贝与深拷贝"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 浅拷贝: 仅仅拷贝第一层\n",
+    "# 深拷贝: 拷贝所有层"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "39. Python垃圾回收机制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 引用计数为主(有循环引用问题, 通过分代回收解决), 标记-清除为辅"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "40. 获取Python解释器版本的方法?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "41. python哪个语句能直接显示的释放内存资源?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "42. lambda表达式格式以及应用场景?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lambda 参数: 返回值\n",
+    "# 匿名函数, 不用定义函数, 只使用一次的场景\n",
+    "# 与函数有相同的作用域, 但引用计数为0, 使用一次就释放\n",
+    "list(filter(lambda x: x%2==0 ,[1,2,3,4,5,6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "43. \\*args和\\*\\*kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *args 接受溢出的位置参数, 将接受的参数组织成元祖\n",
+    "# **kwargs 接受溢出的关键字参数, 将接收的参数组织成字典"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "44. 代码输出的结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "v = dict.fromkeys(['k1','k2'],[])\n",
+    "v['k1'].append(666)\n",
+    "print(v)\n",
+    "v['k1'] = 777\n",
+    "print(v)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k1, k2 指向同一个内存地址\n",
+    "# 赋值之后指向改变"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "45. 一行代码实现99乘法表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1*1=1\n1*2=2\t2*2=4\n1*3=3\t2*3=6\t3*3=9\n1*4=4\t2*4=8\t3*4=12\t4*4=16\n1*5=5\t2*5=10\t3*5=15\t4*5=20\t5*5=25\n1*6=6\t2*6=12\t3*6=18\t4*6=24\t5*6=30\t6*6=36\n1*7=7\t2*7=14\t3*7=21\t4*7=28\t5*7=35\t6*7=42\t7*7=49\n1*8=8\t2*8=16\t3*8=24\t4*8=32\t5*8=40\t6*8=48\t7*8=56\t8*8=64\n1*9=9\t2*9=18\t3*9=27\t4*9=36\t5*9=45\t6*9=54\t7*9=63\t8*9=72\t9*9=81\n"
+    }
+   ],
+   "source": [
+    "print('\\n'.join(['\\t'.join([f'{i}*{j}={i*j}' for i in range(1, j+1)]) for j in range(1, 10)]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "46. 比较三者区别"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [(1), (2), (3)]\n",
+    "c = [(1,), (2,), (3,)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a和b两者值相等, a,b中元素都为数字, c为元祖\n",
+    "a == b\n",
+    "b == c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "47. `1 < (2 == 2)`和`1 < 2 == 2`的结果分别是什么?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 < 2 == 2 \n",
+    "# True\n",
+    "1 < (2 == 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "48. 打乱一个排好序的list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "list = [1,2,3,4,5]\n",
+    "import random\n",
+    "random.shuffle(list)\n",
+    "list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "49. 如何查找一个字符串中特定的字符? find和index差异?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= 'sldjgo3ergowje'\n",
+    "a.find('e')\n",
+    "a.index('e')\n",
+    "# find: 找到返回从0开始的下标值, 若找不到返回-1\n",
+    "# index: 类似字符串的find方法, 查找不到子串, 会抛出异常"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "50. 压缩`aaabbcccd`为`a3b2c3d1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'aaabbcccd'\n",
+    "b = []\n",
+    "for i in a:\n",
+    "    if i not in b:\n",
+    "        b.append(i)\n",
+    "        b.append(str(a.count(i)))\n",
+    "b\n",
+    "''.join(x for x in b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "51.完数:一个数等于它的因子之和, 如6=1+2+3, 找出1000以内的所有完数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(1, 1000):\n",
+    "    sum = 0\n",
+    "    for j in range(1, i//2+1):\n",
+    "        if i%j==0:\n",
+    "            sum+=j\n",
+    "    if sum==i:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "52. 打印字符串的所有排列组合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def perm(s=''):\n",
+    "    if len(s) <= 1:\n",
+    "        return [s]\n",
+    "    sl = []  \n",
+    "    for i in range(len(s)):  \n",
+    "        for j in perm(s[0:i] + s[i + 1:]):  \n",
+    "            sl.append(s[i] + j)  \n",
+    "    return sl\n",
+    "\n",
+    "perm_nums = perm('abc')\n",
+    "no_repeat_nums = list(set(perm_nums))\n",
+    "print('perm_nums', len(perm_nums), perm_nums)\n",
+    "print('no_repeat_nums', len(no_repeat_nums), no_repeat_nums)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "53. 以下代码输出结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "x += x\n",
+    "x -= x - x\n",
+    "x\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "54. 对于一个非空字符串,判断是否可以由一个字字符串重复多次组成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_item(a):\n",
+    "    for i in range(0, len(a)//2+1):\n",
+    "        s_list = a.split(a[:i+1])\n",
+    "        if len(set(s_list)) == 1:\n",
+    "            return True, a[:i+1]\n",
+    "    else: return False\n",
+    "get_item('aaaa')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "55. 从0-99随机取出10个, 不能重复"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "a = set()\n",
+    "\n",
+    "while len(a)<11:\n",
+    "    a.add(random.randint(0, 99))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "56. python如何捕获异常"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    raise KeyError()\n",
+    "except KeyError:\n",
+    "    print('error')\n",
+    "else:\n",
+    "    print('not error')\n",
+    "finally:\n",
+    "    print('finally')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "57. enumerate用法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for index, key in enumerate(range(1, 9)):\n",
+    "    print(index, key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "58. python递归的最大层数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 998"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "59. 列表推导式和生成器表达式的输出结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[i % 2 for i in range(10)]\n",
+    "(i % 2 for i in range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 一个返回列表, 一个返回生成器"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "60. 列举常见的内置函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorted() len() divmode() range()\n",
+    "# int() str() list() dict() set() chr() ord()\n",
+    "# exec() filter() type() id() isinstance() reversed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "61. filter, map, reduce用法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "list(filter(lambda x: x%2==0, a))\n",
+    "list(map(lambda x, y: x+y, a, a))\n",
+    "reduce(lambda x,y: x+y+1, a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "62. 什么是闭包"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 内部函数引用外部函数的变量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "63. 使用生成器编写fib函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\n2\n3\n5\n8\n13\n21\n34\n55\n89\n144\n233\n377\n610\n987\n"
+    }
+   ],
+   "source": [
+    "def fib():\n",
+    "    i, j = 0, 1\n",
+    "    while True:\n",
+    "        k = i + j\n",
+    "        yield k\n",
+    "        i = j\n",
+    "        j = k\n",
+    "for fn in fib():\n",
+    "    if fn > 1000:\n",
+    "        break\n",
+    "    else:\n",
+    "        print(fn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "64. 写一个base62encode函数, 62进制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0123456789AB..Zab..z(10 个数字+26 个大写字母+26 个小写字母)。 \n",
+    "\n",
+    "def base62Encode(n):\n",
+    "    s = \"0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\"\n"
    ]
   }
  ]
