爬虫知识梳理

--- a/source/Python爬虫/爬虫常用代码块.md
+++ b/source/Python爬虫/爬虫常用代码块.md
@@ -225,7 +225,7 @@ def save_mysql(url_source, url_local):
     :param url_source: 文章来源url
     :param url_local: 文章本地url
     """
-    db = pymysql.connect(host='localhost', user='bmnars', password='vi93nwYV', port=3306, db='bmnars')
+    db = pymysql.connect(host='localhost', user='user', password='pwd', port=3306, db='user')
     cursor = db.cursor()
     url_local_full = '/home/bmnars/data/bio360_spider_result_v2/' + url_local
     update_time = time.strftime('%Y-%m-%d',time.localtime())
