--- a/source/Linux/存储.md
+++ b/source/Linux/存储.md
@@ -65,7 +65,7 @@ EOF
 2. 启动nfs服务, 注册端口
 
 客户端:
-1. 建议tcp网络连接
+1. 建立tcp网络连接
 2. 执行挂载命令, 进行远程挂载
 3. 可以实现数据远程传输存储
 ```
@@ -76,8 +76,10 @@ EOF
 服务端
 rw      存储目录是否有读写权限
 ro      只读
+
 sync    同步方式存储数据, 直接保存到磁盘(安全)
 async   异步,直接保存到内存(效率高)
+
 no_root_squash  不要将root用户身份进行转换
 root_squash     转换root用户
 all_squash      转换所有用户
@@ -85,7 +87,9 @@ no_all_squash   不转换普通用户
 
 推荐
 no_all_squash 需要进行配置 共享目录权限为www
+# 客户端储存数据的用户为www, 则服务端共享目录创建uid相同的www用户, 配置共享目录属主为www用户, 客户端www用户可存数据, 其他普通用户不可存
 root_squash   需要进行配置 root->nfsnobody data目录--www
+# 默认把root用户转换为nfsnobody,上边配置了no_all_squash共享目录属主为www,nfsnobody用户无法操作
 
 cat >/etc/exports <<EOF
 /nfs_data 172.17.0.0/24(rw,sync, root_squash, no_all_squash)
@@ -107,5 +111,4 @@ mount -a
 cat >>/etc/fstab <<EOF
 172.16.245.27:/nfs_data /mnt nfs auto 0 0
 EOF
-
 ```
