--- a/source/Linux/备份.md
+++ b/source/Linux/备份.md
@@ -21,10 +21,10 @@
 # -z 压缩数据
 # -a 命令的归档参数, 包含 rtopgDl
 # 需要og参数生效, 配置文件uid和gid为root, 注释fake super
-# 备份的目录后没有/, 则不备份目录,只备份目录下的文件
+# 备份的目录后有/, 则不备份目录,只备份目录下的文件
 
 
-简单使用
+# 简单使用
 
 # 备份到远程backup目录
 rsync -rp /oldboy 172.16.1.41:/backup
@@ -43,7 +43,6 @@ yum -y install rsync
 
 # 2. 编写配置文件
 cat >/etc/rsyncd.conf <<EOF
-
 # 指定管理备份目录的用户
 uid = rsync
 gid = rsync
@@ -91,6 +90,8 @@ systemctl restart rsyncd
 ### rsync守护进程客户端部署
 
 ```shell
+yum -y install rsync
+
 # 创建密码文件
 echo 'crab123' > /etc/rsync.password && chmod 600 /etc/rsync.password
 
@@ -119,7 +120,6 @@ find /backup/172.17.0.2/ -type f -mtime -1 ! -name 'finger.txt'|xargs md5sum>/ba
 
 # 传输数据
 rsync -avzP /backup/172.17.0.2 rsync_backup@172.16.245.27::backup --password-file=/etc/rsync.password
-rsync -avz /etc/hosts rsync_backup@172.16.245.27::backup --password-file=/etc/rsync.password
 ```
 
 备份服务端要完成的工作
@@ -144,28 +144,5 @@ EOF
 # 启动邮件服务
 systemctl restart postfix.service
 
-echo '邮件发送测试'|mail -s '邮件测试' hailunqiu@fulengen.com
-```
-
-客户端脚本编写
-
-```shell
-# /bin/bash
-mkdir -p /backup/172.17.0.2/
-# 备份系统数据
-tar -hzcvf /backup/172.17.0.2/system_backup_$(date +%F_week%w).tar.gz ./var/spool/cron/root ./etc/rc.local ./server/scripts ./etc/sysconfig/iptables
-# 备份web数据
-tar -zcvhf /backup/172.17.0.2/www_backup_$(date +%F_week%w).tar.gz ./var/html/www
-# 备份web日志
-tar -zcvhf /backup/172.17.0.2/www_logs_backup_$(date +%F_week%w).tar.gz ./app/logs/
-
-# web服务器删除7天前的数据
-find /backup/172.17.0.2/ -type f -mtime +7 -delete
-
-# 添加指纹
-find /backup/172.17.0.2/ -type f -mtime -1 ! -name 'finger.txt'|xargs md5sum>/backup/172.17.0.2/finger.txt
-
-# 传输数据
-rsync -avzP /backup/172.17.0.2 rsync_backup@172.16.245.27::backup --password-file=/etc/rsync.password
-rsync -avz /etc/hosts rsync_backup@172.16.245.27::backup --password-file=/etc/rsync.password
+echo '邮件发送测试'|mail -s '邮件测试' crab@crab.com
 ```
