配置参数解析

--- a/source/Linux/备份.md
+++ b/source/Linux/备份.md
@@ -87,6 +87,17 @@ systemctl enable rsyncd
 systemctl restart rsyncd
 ```
 
+配置参数解析
+
+```shell
+hosts allow = 172.17.0.0/24
+hosts deny = 0.0.0.0/32
+
+# 1. 只配置白名单,没有黑名单,白名单通过,其他禁止
+# 2. 只配置黑名单,没有白名单,黑名单禁止,其他通过
+# 3. 黑白名单都配置,黑名单禁止,其他通过
+```
+
 ### rsync守护进程客户端部署
 
 ```shell
